fix(card): adjusts in height and spacing in cards

--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -1,64 +1,63 @@
 .card {
   width: 22rem;
-  min-height: 384px;
 
-  display: grid;
-  grid-template-rows: auto 1fr auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
-  text-align: center;
   overflow: hidden;
-
   &:hover {
     & > img {
       transform: scale(1.1);
     }
   }
-
   img {
     border-radius: 0.625rem;
     transition: transform 800ms ease-in-out;
   }
-  
+
   &__info {
-    height: 100%;
+    flex-grow: 0;
+    margin-bottom: 1.25rem;
+  }
 
-    h3 {
-      @include vars.style-text(
-        vars.$font-family-primary,
-        700,
-        vars.$font-size-lg,
-        1.2
-      );
+  &__containerButton {
+    margin-top: auto;
+  }
+}
 
-      color: vars.$color-blue-800;
-      margin: 38px 0 16px;
-    }
+.card .card__info {
+  h3 {
+    @include vars.style-text(
+      vars.$font-family-primary,
+      700,
+      vars.$font-size-lg,
+      1.2
+    );
 
-    p {
-      @include vars.style-text(
-        vars.$font-family-secondary,
-        400,
-        vars.$font-size-sm,
-        1.5
-      );
+    color: vars.$color-blue-800;
+    margin: 1.5rem 0 .75rem;
+  }
 
-      color: vars.$color-blue-800;
+  p {
+    @include vars.style-text(
+      vars.$font-family-secondary,
+      400,
+      vars.$font-size-sm,
+      1.5
+    );
 
-      span {
-        font-weight: 600;
-      }
-    }
+    color: vars.$color-blue-800;
 
-    &__description {
-      text-align: start;
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
+    span {
+      font-weight: 600;
     }
   }
-  &__containerButton {
-    margin: 0 auto;
-    position: relative;
-    float: bottom;
+
+  &__description {
+    text-align: start;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
   }
 }
